# CoDaS-HEP-GPU-2026

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  check_gpu.py
01/: Session1.ipynb
01/ai-workbook/: README.md  adversarial_vector_add_buggy.cu  problem.ipynb  solution.ipynb  verify_vector_add.cu
02/: Session2_advanced.ipynb
02/ai-workbook/: README.md  adversarial_saxpy_buggy.cu  problem.ipynb  solution.ipynb  verify_saxpy.cu
03/: Streaming and Visual Profiling.ipynb
03/ai-workbook/: README.md  adversarial_streams_buggy.cu  problem.ipynb  solution.ipynb  verify_streams.cu
04/: Session3_Python-GPU_HEP.ipynb  lesson-4-project.ipynb  lesson-4-workbook.ipynb
04/ai-workbook/: README.md  adversarial_histogram_buggy.py  problem.ipynb  solution.ipynb  verify_histogram.py
05/: generator_tutorial_gpu_annotated.ipynb
05/ai-workbook/: README.md  adversarial_weighted_sum_buggy.py  problem.ipynb  solution.ipynb  verify_weighted_sum.py
05/gen-demo/: README.md  gen_demo.py
06/: gpu_dd4hep_tilecal.ipynb  gpu_geant4_dd4hep_cuda_notebook.md
06/adept-demo/: README.md  adept_demo.py
06/ai-workbook/: README.md  adversarial_calorimeter_buggy.py  problem.ipynb  solution.ipynb  verify_calorimeter.py
07/: cuda_neural_network_demo_complete.ipynb
07/ai-workbook/: README.md  adversarial_fcnn_buggy.py  adversarial_softmax_buggy.py  problem.ipynb  (+3 more)
08/: GPU challenge.ipynb
09/: RT_cores_ray_tracing_tutorial.ipynb
09/edit/photon_transport_cuda/: CMakeLists.txt  photon_propagation_cuda.cu
11/: README.md  Session_AI_Native_GPU.ipynb  TEMPLATE_ai_workbook.md
(+27 files in other folders)
